--- a/Web-Files/Version-1.0.0/html/index.html
+++ b/Web-Files/Version-1.0.0/html/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="../css/styles.css">
-<script src="../js/main.js"></script>
+<head>
+    <title>The TeslaOS Archive</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon.png">
+    <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/main.js"></script>
+</head>
 
 
-<title>The TeslaOS Archive</title>
 
 <h1>The TeslaOS Archive</h1>
 
