--- a/Web-Files/Version-1.0.0/html/index.html
+++ b/Web-Files/Version-1.0.0/html/index.html
@@ -14,3 +14,55 @@
 <p>Basically, this is the archive of all the versions of <strong>TeslaOS</strong> to look how much has the proyect improved and advanced.
     In this moment, we are still creating the web, but soon, it will be completed, and displaying all the versions which you will be able to download.
 </p>
+
+<p>Anyway, this is the Web structure, you can also see it in the file <a href="../Web-Files/WebFilesFolder.md">WebFilesFolder.md</a></p>
+
+<details open="open">
+    <summary>Web-Files</summary>
+    <ul>
+      <li>
+        <a href="/Web-Files/Version-1.0.0/">Version 1.0.0</a>
+        <ul>
+          <li><a href="/Web-Files/Version-1.0.0/html/">HTML</a>
+            <ul>
+              <li><a href="/Web-Files/Version-1.0.0/html/index.html">index.html</a></li>
+            </ul>
+          </li>
+          <li><a href="/Web-Files/Version-1.0.0/css">CSS</a>
+            <ul>
+              <li><a href="/Web-Files/Version-1.0.0/css/styles.css">styles.css</a></li>
+            </ul>
+          </li>
+          <li><a href="/Web-Files/Version-1.0.0/js">JS</a>
+            <ul>
+              <li><a href="/Web-Files/Version-1.0.0/js/main.js">main.js</a></li>
+            </ul>
+          </li>
+          <li><a href="/Web-Files/Version-1.0.0/images/">Images</a>
+            <ul>
+              <li><a href="Web-Files/Version-1.0.0/images/favicon.png">favicon.png</a></li>
+            </ul>
+          </li>
+          <li><a href="/Web-Files/Version-1.0.0/fonts/">Fonts</a>
+            <ul>
+              <li><a href="Web-Files/Version-1.0.0/fonts/oxygen">Oxygen</a>
+                <ul>
+                  <li><a href="Web-Files/Version-1.0.0/fonts/oxygen/OFL.txt">OFL.txt</a></li>
+                </ul>
+                <ul>
+                  <li><a href="Web-Files/Version-1.0.0/fonts/oxygen/Oxygen-Bold.ttf">Oxygen-Bold.ttf</a></li>
+                </ul>
+                <ul>
+                  <li><a href="Web-Files/Version-1.0.0/fonts/oxygen/Oxygen-Light.ttf">Oxygen-Light.ttf</a></li>
+                </ul>
+                <ul>
+                  <li><a href="Web-Files/Version-1.0.0/fonts/oxygen/Oxygen-Regular.ttf">Oxygen-Regular.ttf</a></li>
+                </ul>
+              </li>
+              <li><a href="/Web-Files/Version-1.0.0/fonts/DoNotDelete.txt">DoNotDelete.txt</a></li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </details>
