--- a/Web-Files/Version-1.0.0/html/index.html
+++ b/Web-Files/Version-1.0.0/html/index.html
@@ -66,3 +66,21 @@
       </li>
     </ul>
   </details>
+
+
+<sub>Download Versions</sub>
+
+<table>
+  <tr>
+    <th>Version</th>
+    <th>Tarball</th>
+    <th>Zip</th>
+    <th>Timestamp</th>
+  </tr>
+  <tr>
+    <td>Proof version 1</td>
+    <td><button type="button" class="ToDownload" id="TarballExample">Download "TarballExample.txt"</button></td>
+    <td><button type="button" class="ToDownload" id="ZipExample">Download "ZipExample.txt"</button></td>
+    <td>Hour Example</td>
+  </tr>
+</table>
