--- a/Web-Files/Version-1.0.0/html/index.html
+++ b/Web-Files/Version-1.0.0/html/index.html
@@ -79,8 +79,8 @@
   </tr>
   <tr>
     <td>Proof version 1</td>
-    <td><button type="button" class="ToDownload" id="TarballExample">Download "TarballExample.txt"</button></td>
-    <td><button type="button" class="ToDownload" id="ZipExample">Download "ZipExample.txt"</button></td>
+    <td><a href="../test/TarballExample.tar.xz" title="Download 'TarballExample.tar.xz'">Download TarballExample.tar.xz</a></td>
+    <td><a href="../test/ZipExample.zip" title="Download 'ZipExample.zip'">Download ZipExample.zip</a></td>
     <td>Hour Example</td>
   </tr>
 </table>
