--- a/Web-Files/Version-1.0.0/html/index.html
+++ b/Web-Files/Version-1.0.0/html/index.html
@@ -73,14 +73,20 @@
 <table>
   <tr>
     <th>Version</th>
-    <th>Tarball</th>
+    <th>Tar.xz</th>
+    <th>Tar.xz SHA256 Signature</th>
     <th>Zip</th>
+    <th>Zip SHA256 Signature</th>
+    <th>PGP Signature</th>
     <th>Timestamp</th>
   </tr>
   <tr>
     <td>Proof version 1</td>
     <td><a href="../test/TarballExample.tar.xz" title="Download 'TarballExample.tar.xz'">Download TarballExample.tar.xz</a></td>
+    <td>48b1259d016f2887f77f8c6ab13e300b4199f95d955221e185b58138267073e5</td>
     <td><a href="../test/ZipExample.zip" title="Download 'ZipExample.zip'">Download ZipExample.zip</a></td>
-    <td>Hour Example</td>
+    <td>995ed9925b202c3463ba280a5babd239f5c29c441d6ffdb0deb91f453faaa6a4</td>
+    <td>PGP Example</td>
+    <td>Hour Example</td> 
   </tr>
 </table>
