--- a/Web-Files/Version-1.0.0/html/index.html
+++ b/Web-Files/Version-1.0.0/html/index.html
@@ -7,13 +7,35 @@
 </head>
 
 
-
 <h1>The TeslaOS Archive</h1>
 
 <sub>Description</sub>
 <p>Basically, this is the archive of all the versions of <strong>TeslaOS</strong> to look how much has the proyect improved and advanced.
     In this moment, we are still creating the web, but soon, it will be completed, and displaying all the versions which you will be able to download.
 </p>
+
+<sub>Download Versions</sub>
+
+<table>
+  <tr>
+    <th>Version</th>
+    <th>Tar.xz</th>
+    <th>Tar.xz SHA256 Signature</th>
+    <th>Zip</th>
+    <th>Zip SHA256 Signature</th>
+    <th>Timestamp</th>
+  </tr>
+  <tr>
+    <td>Proof version 1</td>
+    <td><a href="../test/TarballExample.tar.xz" title="Download 'TarballExample.tar.xz'">Download TarballExample.tar.xz</a></td>
+    <td><a href="../test/TarballExample.sha256" title="View 'TarballExample.sha256'" target="_blank">View TarballExample.sha256</a>    </td>
+    <td><a href="../test/ZipExample.zip" title="Download 'ZipExample.zip'">Download ZipExample.zip</a></td>
+    <td><a href="../test/ZipExample.sha256" title="View 'ZipExample.sha256'" target="_blank">View ZipExample.sha256</a></td>
+    <td>Hour Example</td> 
+  </tr>
+</table>
+
+<sub>Web structure</sub>
 
 <p>Anyway, this is the Web structure, you can also see it in the file <a href="../Web-Files/WebFilesFolder.md">WebFilesFolder.md</a></p>
 
@@ -66,27 +88,3 @@
       </li>
     </ul>
   </details>
-
-
-<sub>Download Versions</sub>
-
-<table>
-  <tr>
-    <th>Version</th>
-    <th>Tar.xz</th>
-    <th>Tar.xz SHA256 Signature</th>
-    <th>Zip</th>
-    <th>Zip SHA256 Signature</th>
-    <th>PGP Signature</th>
-    <th>Timestamp</th>
-  </tr>
-  <tr>
-    <td>Proof version 1</td>
-    <td><a href="../test/TarballExample.tar.xz" title="Download 'TarballExample.tar.xz'">Download TarballExample.tar.xz</a></td>
-    <td>48b1259d016f2887f77f8c6ab13e300b4199f95d955221e185b58138267073e5</td>
-    <td><a href="../test/ZipExample.zip" title="Download 'ZipExample.zip'">Download ZipExample.zip</a></td>
-    <td>995ed9925b202c3463ba280a5babd239f5c29c441d6ffdb0deb91f453faaa6a4</td>
-    <td>PGP Example</td>
-    <td>Hour Example</td> 
-  </tr>
-</table>
