--- a/Web-Files/Version-1.0.0/html/index.html
+++ b/Web-Files/Version-1.0.0/html/index.html
@@ -62,27 +62,34 @@
           </li>
           <li><a href="/Web-Files/Version-1.0.0/images/">Images</a>
             <ul>
-              <li><a href="Web-Files/Version-1.0.0/images/favicon.png">favicon.png</a></li>
+              <li><a href="/Web-Files/Version-1.0.0/images/favicon.png">favicon.png</a></li>
             </ul>
           </li>
           <li><a href="/Web-Files/Version-1.0.0/fonts/">Fonts</a>
             <ul>
-              <li><a href="Web-Files/Version-1.0.0/fonts/oxygen">Oxygen</a>
+              <li><a href="/Web-Files/Version-1.0.0/fonts/oxygen">Oxygen</a>
                 <ul>
-                  <li><a href="Web-Files/Version-1.0.0/fonts/oxygen/OFL.txt">OFL.txt</a></li>
+                  <li><a href="/Web-Files/Version-1.0.0/fonts/oxygen/OFL.txt">OFL.txt</a></li>
                 </ul>
                 <ul>
-                  <li><a href="Web-Files/Version-1.0.0/fonts/oxygen/Oxygen-Bold.ttf">Oxygen-Bold.ttf</a></li>
+                  <li><a href="/Web-Files/Version-1.0.0/fonts/oxygen/Oxygen-Bold.ttf">Oxygen-Bold.ttf</a></li>
                 </ul>
                 <ul>
-                  <li><a href="Web-Files/Version-1.0.0/fonts/oxygen/Oxygen-Light.ttf">Oxygen-Light.ttf</a></li>
+                  <li><a href="/Web-Files/Version-1.0.0/fonts/oxygen/Oxygen-Light.ttf">Oxygen-Light.ttf</a></li>
                 </ul>
                 <ul>
-                  <li><a href="Web-Files/Version-1.0.0/fonts/oxygen/Oxygen-Regular.ttf">Oxygen-Regular.ttf</a></li>
+                  <li><a href="/Web-Files/Version-1.0.0/fonts/oxygen/Oxygen-Regular.ttf">Oxygen-Regular.ttf</a></li>
                 </ul>
               </li>
               <li><a href="/Web-Files/Version-1.0.0/fonts/DoNotDelete.txt">DoNotDelete.txt</a></li>
             </ul>
+          </li>
+          <li><a href="/Web-Files/Version-1.0.0/test/">Test</a>
+            <ul>
+              <li><a href="/Web-Files/Version-1.0.0/test/TarballExample.sha256">TarballExample.sha256</a></li>
+              <li><a href="/Web-Files/Version-1.0.0/test/TarballExample.tar.xz">TarballExample.tar.xz</a></li>
+              <li><a href="/Web-Files/Version-1.0.0/test/ZipExample.sha256">ZipExample.sha256</a></li>
+              <li><a href="/Web-Files/Version-1.0.0/test/ZipExample.zip">ZipExample.zip</a></li>
           </li>
         </ul>
       </li>
