Solve bugs and colors

--- a/Web-Files/Version-1.0.0/html/index.html
+++ b/Web-Files/Version-1.0.0/html/index.html
@@ -37,7 +37,7 @@
 
 <sub>Web structure</sub>
 
-<p>Anyway, this is the Web structure, you can also see it in the file <a href="../Web-Files/WebFilesFolder.md">WebFilesFolder.md</a></p>
+<p>Anyway, this is the Web structure, you can also see it in the file <a href="../WebFilesFolder.md">WebFilesFolder.md</a></p>
 
 <details open="open">
     <summary>Web-Files</summary>
